--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.data.cassandra.keyspace-name=aerobay
+spring.data.cassandra.keyspace-name=******
 spring.data.cassandra.contact-points=localhost
 spring.data.cassandra.port=9042
-spring.data.cassandra.username=aerobay
-spring.data.cassandra.password=aerobay
+spring.data.cassandra.username=******
+spring.data.cassandra.password=******
 spring.data.cassandra.local-datacenter=datacenter1
